--- a/static/hello-world/src/App.css
+++ b/static/hello-world/src/App.css
@@ -1,8 +1,8 @@
 .App {
 	/* text-align: center; */
-	width: 1100px;
-	height: 600px;
-
+	width: 100%;
+	height: 100%;
+	padding: 10px;
 }
 
 .App-logo {
