--- a/static/hello-world/src/index.css
+++ b/static/hello-world/src/index.css
@@ -1,18 +1,63 @@
+html,
+body,
+#root {
+	height: 550px;
+	width: 100%;
+	overflow: hidden;
+	margin: 0;
+}
+
+.wrapper {
+	height: calc(100% - 95px);
+	width: calc(100% - 20px);
+	margin-top: 10px;
+}
+
 .layoutflow {
-    flex-grow: 1;
-    position: relative;
-    height: 100%;
-  }
-  
-  .layoutflow .controls {
-    position: absolute;
-    right: 10px;
-    top: 10px;
-    z-index: 10;
-    font-size: 12px;
-  }
-  
-  .layoutflow .controls button:first-child {
-    margin-right: 10px;
-  }
-  
+	flex-grow: 1;
+	position: relative;
+	height: 100%;
+}
+
+.react-flow__node {
+	min-width: max-content;
+	border-radius: 80px !important;
+	border: 2px solid #87b2df !important;
+	box-shadow: var(--node-box-shadow);
+}
+
+.react-flow__handle {
+	opacity: 0;
+}
+
+.layoutflow .controls {
+	position: absolute;
+	right: 10px;
+	top: 10px;
+	z-index: 10;
+	font-size: 12px;
+	margin-right: 10px;
+}
+
+.layoutflow .controls button:first-child {
+	margin-right: 10px;
+}
+
+.select {
+	width: 396px;
+	z-index: 9;
+}
+
+.App button,
+input[type='submit'] {
+	background-color: #4488ce;
+	outline: none;
+	color: #fff;
+	border: none;
+	border-radius: 5px;
+	padding: 5px;
+}
+
+.react-flow__controls {
+	bottom: 60px !important;
+}
